--- a/WalletPlus/src/main/res/layout/cashflow_list_item.xml
+++ b/WalletPlus/src/main/res/layout/cashflow_list_item.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:textSize="@dimen/bigFontSize"
+        android:textSize="@dimen/mediumFontSize"
         android:textStyle="bold" />
 
     <TextView
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:textSize="@dimen/veryBigFontSize" />
+        android:textSize="@dimen/xLargeFontSize" />
 
     <TextView
         android:id="@+id/date"
