--- a/WalletPlus/src/main/res/layout/wallet_details.xml
+++ b/WalletPlus/src/main/res/layout/wallet_details.xml
@@ -61,9 +61,37 @@
             android:layout_below="@+id/walletInitialAmountLabel"
             android:layout_marginBottom="8dp"
             android:hint="@string/walletInitialAmountLabel"
-            android:inputType="numberDecimal"
+            android:inputType="text"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:textSize="@dimen/mediumFontSize" />
+
+        <TextView
+            android:id="@+id/walletCurrentAmountLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/walletInitialAmount"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:paddingTop="16dp"
+            android:text="@string/walletCurrentAmountLabel"
+            android:textSize="@dimen/smallFontSize"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/walletCurrentAmount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/walletCurrentAmountLabel"
+            android:paddingBottom="16dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:textSize="@dimen/mediumFontSize"
+            android:visibility="invisible" />
     </RelativeLayout>
 </ScrollView>
