Change ActionBar to Toolbar + Change main color to green

--- a/WalletPlus/src/main/res/values/color.xml
+++ b/WalletPlus/src/main/res/values/color.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Style colors -->
-    <color name="actionBarBackground">#FF9909</color>
-    <color name="drawerBackground">#FF818181</color>
+    <color name="actionBarBackground">#4CAF50</color>
+    <color name="drawerBackground">#FFFFFF</color>
     <color name="background">#EEEEEE</color>
 
     <!--Card colors -->
