--- a/WalletPlus/src/main/res/values/styles.xml
+++ b/WalletPlus/src/main/res/values/styles.xml
@@ -1,43 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="WalletPlusStyle" parent="Theme.AppCompat.Light">
-        <item name="android:actionBarStyle">@style/WalletPlus.ActionBar</item>
-        <item name="actionBarStyle">@style/WalletPlus.ActionBar</item>
-
-        <item name="android:actionModeStyle">@style/WalletPlus.ActionMode</item>
-        <item name="actionModeStyle">@style/WalletPlus.ActionMode</item>
-    </style>
-
-    <!-- ActionBar style -->
-    <style name="WalletPlus.ActionBar" parent="Widget.AppCompat.ActionBar.Solid">
-        <item name="android:background">@color/actionBarBackground</item>
-        <item name="background">@color/actionBarBackground</item>
-
-        <item name="android:titleTextStyle">@style/WalletPlus.ActionBarTitleText</item>
-        <item name="titleTextStyle">@style/WalletPlus.ActionBarTitleText</item>
-
-        <item name="android:subtitleTextStyle">@style/WalletPlus.ActionBarTitleText</item>
-        <item name="subtitleTextStyle">@style/WalletPlus.ActionBarTitleText</item>
-    </style>
-
-    <style name="WalletPlus.ActionBarTitleText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/white</item>
-    </style>
-
-    <!-- ActionMode style -->
-    <style name="WalletPlus.ActionMode" parent="TextAppearance.AppCompat.Widget.ActionMode.Title">
-        <item name="android:actionModeBackground">@color/actionBarBackground</item>
-        <item name="actionModeBackground">@color/actionBarBackground</item>
-
-        <item name="android:titleTextStyle">@style/WalletPlus.ActionModeTitleText</item>
-        <item name="titleTextStyle">@style/WalletPlus.ActionModeTitleText</item>
-
-        <item name="android:subtitleTextStyle">@style/WalletPlus.ActionModeTitleText</item>
-        <item name="subtitleTextStyle">@style/WalletPlus.ActionModeTitleText</item>
-    </style>
-
-    <style name="WalletPlus.ActionModeTitleText" parent="TextAppearance.AppCompat.Widget.ActionMode.Title">
-        <item name="android:textColor">@color/white</item>
+    <style name="WalletPlusStyle" parent="Theme.AppCompat.Light.NoActionBar">
     </style>
 
     <!-- CardIU -->
