--- a/WalletPlus/src/main/res/values/color.xml
+++ b/WalletPlus/src/main/res/values/color.xml
@@ -1,6 +1,8 @@
 <resources>
     <!-- Style colors -->
-    <color name="actionBarBackground">#4CAF50</color>
+    <color name="mainColor">#4CAF50</color>
+    <color name="darkerMainColor">#2E7D32</color>
+
     <color name="drawerBackground">#FFFFFF</color>
     <color name="background">#EEEEEE</color>
 
