--- a/WalletPlus/src/main/res/layout/category_details.xml
+++ b/WalletPlus/src/main/res/layout/category_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:padding="@dimen/cardPadding">
+    android:padding="@dimen/edgePadding">
 
     <RelativeLayout style="@style/Card">
 
