--- a/WalletPlus/src/main/res/layout/cashflow_details_fragment.xml
+++ b/WalletPlus/src/main/res/layout/cashflow_details_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:padding="@dimen/cardPadding">
+    android:padding="@dimen/edgePadding">
 
     <RelativeLayout xmlns:fbutton="http://schemas.android.com/apk/res-auto"
         style="@style/Card">
