--- a/WalletPlus/src/main/res/layout/category_list.xml
+++ b/WalletPlus/src/main/res/layout/category_list.xml
@@ -3,10 +3,8 @@
 <ExpandableListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:cacheColorHint="@android:color/transparent"
     android:descendantFocusability="afterDescendants"
-    android:divider="@android:color/transparent"
-    android:dividerHeight="0dp"
-    android:groupIndicator="@null"
-    android:listSelector="@android:color/transparent" />
+    android:divider="@null"
+    android:groupIndicator="@null" />
