--- a/WalletPlus/src/main/res/layout/dashboard_fragment.xml
+++ b/WalletPlus/src/main/res/layout/dashboard_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/cardPadding">
+    android:padding="@dimen/edgePadding">
 
     <TextView
         android:id="@+id/totalAmount"
