--- a/WalletPlus/src/main/res/layout/expandable_child_content.xml
+++ b/WalletPlus/src/main/res/layout/expandable_child_content.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="0dp"
-    android:paddingLeft="@dimen/doubleCardPadding"
-    android:paddingRight="@dimen/doubleCardPadding"
-    android:paddingTop="0dp">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/edgePadding"
+    android:paddingRight="@dimen/edgePadding">
+
+    <ImageView
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/light_divider" />
 
     <FrameLayout
-        android:id="@+id/content"
-        style="@style/Card">
+        android:id="@+id/child_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/edgePadding">
 
         <ViewStub
-            android:id="@+id/contentStub"
+            android:id="@+id/content_stub"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="44dp" />
     </FrameLayout>
-</FrameLayout>
+
+</LinearLayout>
