--- a/WalletPlus/src/main/res/layout/expandable_group_content.xml
+++ b/WalletPlus/src/main/res/layout/expandable_group_content.xml
@@ -1,48 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="afterDescendants"
-    android:paddingBottom="0dp"
-    android:paddingLeft="@dimen/cardPadding"
-    android:paddingRight="@dimen/cardPadding"
-    android:paddingTop="@dimen/cardPadding">
+    android:paddingLeft="@dimen/edgePadding">
 
-    <LinearLayout
-        style="@style/Card"
-        android:orientation="horizontal"
-        android:padding="0dp">
+    <ImageView
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/dark_divider" />
 
-        <FrameLayout
-            android:id="@+id/content"
+    <FrameLayout
+        android:id="@+id/group_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/divider"
+        android:layout_toLeftOf="@+id/group_indicator">
+
+        <ViewStub
+            android:id="@+id/content_stub"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingBottom="@dimen/cardContentPadding"
-            android:paddingLeft="@dimen/cardContentPadding"
-            android:paddingTop="@dimen/cardContentPadding">
+            android:layout_height="64dp" />
+    </FrameLayout>
 
-            <ViewStub
-                android:id="@+id/contentStub"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/group_indicator_frame"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0"
-            android:padding="5dp">
-
-            <ImageView
-                android:id="@+id/group_indicator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@null"
-                android:scaleType="fitCenter" />
-        </FrameLayout>
-    </LinearLayout>
-</FrameLayout>
+    <ImageView
+        android:id="@+id/group_indicator"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_below="@id/divider"
+        android:layout_centerInParent="true"
+        android:background="@null"
+        android:scaleType="center" />
+</RelativeLayout>
