Fix Toolbar title

--- a/WalletPlus/src/main/res/layout/activity_main.xml
+++ b/WalletPlus/src/main/res/layout/activity_main.xml
@@ -20,16 +20,7 @@
             android:background="@color/mainColor"
             android:minHeight="?attr/actionBarSize"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-            <TextView
-                android:id="@+id/toolbarTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/largeFontSize" />
-        </android.support.v7.widget.Toolbar>
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <FrameLayout
             android:id="@+id/content_frame"
