--- a/WalletPlus/src/main/res/values/color.xml
+++ b/WalletPlus/src/main/res/values/color.xml
@@ -4,8 +4,8 @@
     <color name="lightMainColor">#C8E6C9</color>
     <color name="darkerMainColor">#2E7D32</color>
 
-    <color name="drawerBackground">#FFFFFF</color>
-    <color name="background">#FFFFFF</color>
+    <color name="background">#EEEEEE</color>
+    <color name="drawerBackground">#EEEEEE</color>
 
     <!--Card colors -->
     <color name="cardShadow">#DBDBDB</color>
@@ -18,6 +18,19 @@
     <color name="blue">#0099CC</color>
 
     <!-- Grey scale -->
+
+    <color name="whiteFF">#FFFFFF</color>
+    <color name="whiteFA">#FAFAFA</color>
+    <color name="whiteF1">#F1F1F1</color>
+    <color name="whiteEE">#EEEEEE</color>
+    <color name="whiteE5">#E5E5E5</color>
+    <color name="whiteDD">#DDDDDD</color>
+
+    <color name="black80">#343434</color>
+    <color name="black90">#1A1a1A</color>
+    <color name="black100">#000000</color>
+
+    <color name="white4A">#1F000000</color>
     <color name="black12A">#1F000000</color>
     <color name="black54A">#8F000000</color>
     <color name="black87A">#DE000000</color>
