--- a/WalletPlus/src/main/res/layout/cashflow_list.xml
+++ b/WalletPlus/src/main/res/layout/cashflow_list.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
-</LinearLayout>
+    android:layout_height="match_parent"
+    android:choiceMode="singleChoice"
+    android:clipToPadding="true" />
