--- a/WalletPlus/src/main/res/layout/cashflow_list.xml
+++ b/WalletPlus/src/main/res/layout/cashflow_list.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/list"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:choiceMode="singleChoice"
-    android:clipToPadding="true" />
+    android:layout_height="match_parent">
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:choiceMode="singleChoice"
+        android:divider="@color/listItemDivider"
+        android:dividerHeight="1px"/>
+</FrameLayout>
