--- a/WalletPlus/src/main/res/values/color.xml
+++ b/WalletPlus/src/main/res/values/color.xml
@@ -5,7 +5,6 @@
     <color name="darkerMainColor">#2E7D32</color>
 
     <color name="background">#EEEEEE</color>
-    <color name="drawerBackground">#EEEEEE</color>
 
     <!--Card colors -->
     <color name="cardShadow">#DBDBDB</color>
@@ -17,8 +16,18 @@
     <color name="red">#FF4444</color>
     <color name="blue">#0099CC</color>
 
-    <!-- Grey scale -->
+    <!--Drawer -->
+    <color name="drawerBackground">#FFFFFF</color>
+    <color name="drawerItemSelected">#EDEDED</color>
+    <color name="drawerItemPressed">#EBEBEB</color>
 
+    <!-- Lists -->
+    <color name="listItemBackground">#FFFFFF</color>
+    <color name="listItemBackgroundChecked">#ECECEC</color>
+    <color name="listItemBackgroundPressed">#D9D9D9</color>
+    <color name="listItemDivider">#CCCCCC</color>
+
+    <!-- Grey scale -->
     <color name="whiteFF">#FFFFFF</color>
     <color name="whiteFA">#FAFAFA</color>
     <color name="whiteF1">#F1F1F1</color>
