--- a/WalletPlus/src/main/res/values/dimens.xml
+++ b/WalletPlus/src/main/res/values/dimens.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <dimen name="navigation_drawer_width">240dp</dimen>
-    <dimen name="cardContentPadding">15dp</dimen>
+    <dimen name="cardContentPadding">16dp</dimen>
+    <dimen name="cardContentMargin">8dp</dimen>
     <dimen name="edgePadding">12dp</dimen> <!-- after changed, change doubleCardPadding value -->
     <dimen name="doubleEdgePadding">32dp</dimen>
     <!-- font size -->
