--- a/WalletPlus/src/main/res/layout/cashflow_details_fragment.xml
+++ b/WalletPlus/src/main/res/layout/cashflow_details_fragment.xml
@@ -1,145 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:padding="@dimen/edgePadding">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:fbutton="http://schemas.android.com/apk/res-auto"
-        style="@style/Card">
-
-        <TextView
-            android:id="@+id/fromWalletLabel"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:text="@string/cashflowFromWalletLabel"
-            android:textSize="@dimen/smallFontSize" />
+            android:layout_margin="@dimen/cardContentMargin"
+            card_view:cardCornerRadius="4dp">
 
-        <Spinner
-            android:id="@+id/fromWallet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/fromWalletLabel"
-            android:spinnerMode="dropdown" />
+        <LinearLayout xmlns:fbutton="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/cardContentPadding">
 
-        <TextView
-            android:id="@+id/toWalletLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/fromWallet"
-            android:text="@string/cashflowToWalletLabel"
-            android:textSize="@dimen/smallFontSize" />
+            <TextView android:id="@+id/fromWalletLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cashFlowFromWalletLabel"
+                    android:textSize="@dimen/smallFontSize" />
 
-        <Spinner
-            android:id="@+id/toWallet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/toWalletLabel"
-            android:spinnerMode="dropdown" />
+            <LinearLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/amountLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/toWallet"
-            android:text="@string/cashflowAmountLabel"
-            android:textSize="@dimen/smallFontSize" />
+                <Spinner android:id="@+id/fromWallet"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:spinnerMode="dropdown" />
 
-        <EditText
-            android:id="@+id/amount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/amountLabel"
-            android:hint="@string/cashflowAmountHint"
-            android:inputType="number|numberDecimal"
-            android:textSize="@dimen/mediumFontSize" />
+                <info.hoang8f.widget.FButton android:id="@+id/typeToggle"
+                        android:layout_width="0dp"
+                        android:layout_height="36dp"
+                        android:layout_weight="1"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/smallFontSize"
+                        fbutton:cornerRadius="2dp"
+                        fbutton:shadowHeight="2dp" />
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/commentLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/amount"
-            android:text="@string/cashflowCommentLabel"
-            android:textSize="@dimen/smallFontSize" />
+            <TextView android:id="@+id/toWalletLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cashFlowToWalletLabel"
+                    android:textSize="@dimen/smallFontSize" />
 
-        <EditText
-            android:id="@+id/comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/commentLabel"
-            android:hint="@string/cashflowCommentHint"
-            android:inputType="textAutoCorrect"
-            android:textSize="@dimen/mediumFontSize" />
+            <LinearLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/categoryLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/comment"
-            android:text="@string/cashflowCategoryLabel"
-            android:textSize="@dimen/smallFontSize" />
+                <Spinner android:id="@+id/toWallet"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:spinnerMode="dropdown" />
 
-        <info.hoang8f.widget.FButton
-            android:id="@+id/category"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/categoryLabel"
-            android:layout_margin="5dp"
-            android:layout_toLeftOf="@+id/removeCategory"
-            android:text="@string/cashflowCategoryHint"
-            fbutton:buttonColor="@color/background"
-            fbutton:cornerRadius="4dp"
-            fbutton:shadowHeight="3dp" />
+                <info.hoang8f.widget.FButton android:id="@+id/transferToggle"
+                        android:layout_width="0dp"
+                        android:layout_height="36dp"
+                        android:layout_weight="1"
+                        android:text="@string/transfer"
+                        android:textAllCaps="true"
+                        android:textSize="@dimen/smallFontSize"
+                        fbutton:cornerRadius="2dp"
+                        fbutton:shadowHeight="2dp" />
+            </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/removeCategory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/category"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/category"
-            android:layout_below="@id/categoryLabel"
-            android:layout_centerInParent="true"
-            android:background="@null"
-            android:src="@drawable/ic_remove" />
+            <TextView android:id="@+id/amountLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cashflowAmountLabel"
+                    android:textSize="@dimen/smallFontSize" />
 
-        <info.hoang8f.widget.FButton
-            android:id="@+id/datePicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/category"
-            android:layout_margin="5dp"
-            android:layout_toLeftOf="@+id/timePicker"
-            android:drawableLeft="@drawable/ic_calendar"
-            android:drawablePadding="10dp"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:singleLine="true"
-            fbutton:buttonColor="@color/background"
-            fbutton:cornerRadius="4dp"
-            fbutton:shadowHeight="3dp" />
+            <EditText android:id="@+id/amount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/cashflowAmountHint"
+                    android:inputType="number|numberDecimal"
+                    android:textSize="@dimen/mediumFontSize" />
 
-        <info.hoang8f.widget.FButton
-            android:id="@+id/timePicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/category"
-            android:layout_margin="5dp"
-            android:drawableLeft="@drawable/ic_clock"
-            android:drawablePadding="10dp"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:singleLine="true"
-            fbutton:buttonColor="@color/background"
-            fbutton:cornerRadius="4dp"
-            fbutton:shadowHeight="3dp" />
+            <TextView android:id="@+id/commentLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cashflowCommentLabel"
+                    android:textSize="@dimen/smallFontSize" />
 
-    </RelativeLayout>
+            <EditText android:id="@+id/comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/cashflowCommentHint"
+                    android:inputType="textAutoCorrect"
+                    android:textSize="@dimen/mediumFontSize" />
+
+            <TextView android:id="@+id/categoryLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cashflowCategoryLabel"
+                    android:textSize="@dimen/smallFontSize" />
+
+            <LinearLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                <info.hoang8f.widget.FButton android:id="@+id/category"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        fbutton:buttonColor="@color/background"
+                        fbutton:cornerRadius="2dp"
+                        fbutton:shadowHeight="2dp" />
+
+                <ImageButton android:id="@+id/removeCategory"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:src="@drawable/ic_remove" />
+            </LinearLayout>
+
+            <LinearLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                <info.hoang8f.widget.FButton android:id="@+id/datePicker"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="3"
+                        android:drawableLeft="@drawable/ic_calendar"
+                        android:drawablePadding="10dp"
+                        android:drawableStart="@drawable/ic_calendar"
+                        android:gravity="center"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:singleLine="true"
+                        fbutton:buttonColor="@color/background"
+                        fbutton:cornerRadius="4dp"
+                        fbutton:shadowHeight="3dp" />
+
+                <info.hoang8f.widget.FButton android:id="@+id/timePicker"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="2"
+                        android:drawableLeft="@drawable/ic_clock"
+                        android:drawablePadding="10dp"
+                        android:drawableStart="@drawable/ic_clock"
+                        android:gravity="center"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:singleLine="true"
+                        fbutton:buttonColor="@color/background"
+                        fbutton:cornerRadius="4dp"
+                        fbutton:shadowHeight="3dp" />
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </ScrollView>
