--- a/WalletPlus/src/main/res/layout/activity_main.xml
+++ b/WalletPlus/src/main/res/layout/activity_main.xml
@@ -46,6 +46,8 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
+                    android:layout_toLeftOf="@+id/switchAccount"
+                    android:layout_toStartOf="@+id/switchAccount"
                     android:orientation="vertical">
 
                 <TextView android:id="@+id/accountName"
@@ -58,7 +60,7 @@
                         android:layout_height="20dp"
                         android:padding="0dp"
                         android:text="@string/accountLinkWithGoogle"
-                        android:textSize="10sp"/>
+                        android:textSize="@dimen/smallFontSize"/>
             </LinearLayout>
 
             <info.korzeniowski.walletplus.widget.SquareImageButton android:id="@+id/switchAccount"
