--- a/WalletPlus/src/main/res/values/color.xml
+++ b/WalletPlus/src/main/res/values/color.xml
@@ -8,7 +8,7 @@
 
     <color name="buttonBackground">#3EADEB</color>
     <color name="buttonTextColor">#4DFFFFFF</color>
-    <color name="buttontextColorDisabled">#42000000</color>
+    <color name="buttonTextColorDisabled">#42000000</color>
 
     <!--Card colors -->
     <color name="cardShadow">#DBDBDB</color>
@@ -33,17 +33,8 @@
 
     <!-- Grey scale -->
     <color name="whiteFF">#FFFFFF</color>
-    <color name="whiteFA">#FAFAFA</color>
-    <color name="whiteF1">#F1F1F1</color>
-    <color name="whiteEE">#EEEEEE</color>
     <color name="whiteE5">#E5E5E5</color>
-    <color name="whiteDD">#DDDDDD</color>
 
-    <color name="black80">#343434</color>
-    <color name="black90">#1A1a1A</color>
-    <color name="black100">#000000</color>
-
-    <color name="white4A">#1F000000</color>
     <color name="black12A">#1F000000</color>
     <color name="black54A">#8F000000</color>
     <color name="black87A">#DE000000</color>
