--- a/WalletPlus/src/main/res/layout/cashflow_details_fragment.xml
+++ b/WalletPlus/src/main/res/layout/cashflow_details_fragment.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:padding="@dimen/cardMargin">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/cardContentMargin"
-            card_view:cardCornerRadius="4dp">
+    <android.support.v7.widget.CardView android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <LinearLayout xmlns:fbutton="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
