--- a/WalletPlus/src/main/res/layout/category_details.xml
+++ b/WalletPlus/src/main/res/layout/category_details.xml
@@ -1,52 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:padding="@dimen/edgePadding">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:padding="@dimen/cardMargin">
 
-    <RelativeLayout style="@style/Card">
+    <android.support.v7.widget.CardView android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/categoryNameLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:text="@string/categoryNameLabel"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+        <RelativeLayout android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/cardContentPadding">
 
-        <EditText
-            android:id="@+id/categoryName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/categoryNameLabel"
-            android:hint="@string/categoryNameHint"
-            android:inputType="textAutoCorrect"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            <TextView android:id="@+id/categoryNameLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:text="@string/categoryNameLabel"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
-        <TextView
-            android:id="@+id/CategoryParentLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/categoryName"
-            android:text="@string/categoryParentLabel" />
+            <EditText android:id="@+id/categoryName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/categoryNameLabel"
+                    android:hint="@string/categoryNameHint"
+                    android:inputType="textAutoCorrect"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-        <Spinner
-            android:id="@+id/parentCategory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/CategoryParentLabel" />
+            <TextView android:id="@+id/CategoryParentLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/categoryName"
+                    android:text="@string/categoryParentLabel"/>
 
-        <TextView
-            android:id="@+id/categoryTypeLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/parentCategory"
-            android:text="@string/categoryTypeLabel"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </RelativeLayout>
+            <Spinner android:id="@+id/parentCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/CategoryParentLabel"/>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </ScrollView>
