--- a/WalletPlus/src/main/res/menu/action_save.xml
+++ b/WalletPlus/src/main/res/menu/action_save.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:wallet="http://schemas.android.com/apk/res-auto" >
 
-    <type
+    <item
         android:id="@+id/menu_save"
         android:icon="@drawable/ic_action_save"
         android:title="@string/add"
