Rename layout xml files

--- a/WalletPlus/src/main/res/layout/activity_category_details.xml
+++ b/WalletPlus/src/main/res/layout/activity_category_details.xml
@@ -8,5 +8,5 @@
 
     <include layout="@layout/toolbar_actionbar"/>
 
-    <include layout="@layout/category_details"/>
+    <include layout="@layout/fragment_category_details"/>
 </LinearLayout>
