--- a/WalletPlus/src/main/res/layout/activity_drawer.xml
+++ b/WalletPlus/src/main/res/layout/activity_drawer.xml
@@ -18,11 +18,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
-
     </LinearLayout>
 
     <!-- Nav drawer -->
-    <include layout="@layout/navdrawer"/>
+    <include layout="@layout/navigation_drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
 
