--- a/WalletPlus/src/main/res/layout/activity_category_list.xml
+++ b/WalletPlus/src/main/res/layout/activity_category_list.xml
@@ -26,7 +26,7 @@
     </LinearLayout>
 
     <!-- Nav drawer -->
-    <include layout="@layout/navdrawer"/>
+    <include layout="@layout/navigation_drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
 
