--- a/WalletPlus/src/main/res/layout/navigation_drawer.xml
+++ b/WalletPlus/src/main/res/layout/navigation_drawer.xml
@@ -39,7 +39,7 @@
                         android:src="@drawable/ic_drawer_accounts_expand"
                         android:visibility="gone"/>
 
-                <TextView android:id="@+id/account_name"
+                <TextView android:id="@+id/profile_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
@@ -55,7 +55,7 @@
                 <TextView android:id="@+id/account_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_above="@id/account_name"
+                        android:layout_above="@id/profile_name"
                         android:layout_alignParentStart="true"
                         android:layout_toLeftOf="@id/expand_account_box_indicator"
                         android:ellipsize="end"
