--- a/WalletPlus/src/main/res/layout/activity_drawer.xml
+++ b/WalletPlus/src/main/res/layout/activity_drawer.xml
@@ -18,6 +18,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
+
+        <FrameLayout android:id="@+id/focusable"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"/>
     </LinearLayout>
 
     <!-- Nav drawer -->
