--- a/WalletPlus/src/main/res/layout/fragment_cash_flow_details.xml
+++ b/WalletPlus/src/main/res/layout/fragment_cash_flow_details.xml
@@ -53,9 +53,7 @@
 
             <MultiAutoCompleteTextView android:id="@+id/category"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"/>
+                    android:layout_height="wrap_content"/>
 
             <TextView android:id="@+id/amountLabel"
                     android:layout_width="match_parent"
