--- a/WalletPlus/src/main/res/layout/item_cash_flow_list.xml
+++ b/WalletPlus/src/main/res/layout/item_cash_flow_list.xml
@@ -25,7 +25,7 @@
                 android:textSize="@dimen/mediumFontSize"
                 android:textStyle="bold"/>
 
-        <TextView android:id="@+id/category"
+        <TextView android:id="@+id/tag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
