Better input of tags in CashFlow

--- a/WalletPlus/src/main/res/layout/item_cash_flow_list.xml
+++ b/WalletPlus/src/main/res/layout/item_cash_flow_list.xml
@@ -14,7 +14,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:textSize="@dimen/verySmallFontSize"/>
+                android:textSize="@dimen/xSmallFontSize"/>
 
         <TextView android:id="@+id/amount"
                 android:layout_width="wrap_content"
