Separate navigation drawer and profile activity for debug and release + Fix example data + Restore Cash Flow comment

--- a/WalletUDo/src/main/res/layout/item_cash_flow_list.xml
+++ b/WalletUDo/src/main/res/layout/item_cash_flow_list.xml
@@ -1,43 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.walletudo.widget.CheckableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/selector_list_item">
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/selector_list_item">
+        android:padding="@dimen/cardContentPadding">
 
-    <RelativeLayout android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/cardContentPadding">
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:textSize="@dimen/xSmallFontSize" />
 
-        <TextView android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:textSize="@dimen/xSmallFontSize"/>
+        <TextView
+            android:id="@+id/amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:textSize="@dimen/xLargeFontSize" />
 
-        <TextView android:id="@+id/amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:textSize="@dimen/xLargeFontSize"/>
+        <TextView
+            android:id="@+id/wallet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/date"
+            android:layout_toStartOf="@id/amount"
+            android:textSize="@dimen/mediumFontSize"
+            android:textStyle="bold" />
 
-        <TextView android:id="@+id/wallet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@id/date"
-                android:layout_toStartOf="@id/amount"
-                android:textSize="@dimen/mediumFontSize"
-                android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/wallet" />
 
-        <TextView android:id="@+id/tag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/wallet"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentStart="true"/>
+        <TextView
+            android:id="@+id/comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/tag"
+            android:textSize="@dimen/smallFontSize" />
     </RelativeLayout>
 </com.walletudo.widget.CheckableFrameLayout>
