--- a/WalletUDo/src/main/res/layout/fragment_cash_flow_details.xml
+++ b/WalletUDo/src/main/res/layout/fragment_cash_flow_details.xml
@@ -70,6 +70,20 @@
                     android:inputType="numberDecimal|numberSigned"
                     android:textSize="@dimen/mediumFontSize"/>
 
+            <TextView android:id="@+id/commentLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/cashflowCommentLabel"
+                android:textSize="@dimen/smallFontSize"
+                android:visibility="invisible"/>
+
+            <EditText android:id="@+id/comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:hint="@string/cashflowCommentHint"
+                android:textSize="@dimen/mediumFontSize"/>
+
             <TextView android:id="@+id/extraLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
