--- a/Walletudo/src/main/res/layout/fragment_dashboard.xml
+++ b/Walletudo/src/main/res/layout/fragment_dashboard.xml
@@ -1,43 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <LinearLayout android:layout_width="match_parent"
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_margin="@dimen/cardMargin">
 
-        <android.support.v7.widget.CardView android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/totalAmount"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/cardMargin">
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:padding="@dimen/cardContentPadding"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </android.support.v7.widget.CardView>
 
-            <TextView android:id="@+id/totalAmount"
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/cardMargin">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
-                    android:padding="@dimen/cardContentPadding"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-        </android.support.v7.widget.CardView>
+                    android:text="@string/dashboardChartLabel" />
 
-        <android.support.v7.widget.CardView android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/cardMargin">
+                <lecho.lib.hellocharts.view.BubbleChartView
+                    android:id="@+id/chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:padding="@dimen/cardContentPadding" />
 
-            <LinearLayout android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/dashboardChartLabel"/>
-
-                <lecho.lib.hellocharts.view.LineChartView android:id="@+id/chart"
-                        android:layout_width="match_parent"
-                        android:layout_height="250dp"
-                        android:padding="@dimen/cardContentPadding"/>
+                <com.walletudo.ui.cashflow.list.CashFlowListItemView
+                    android:id="@+id/selectedCashFlow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
