--- a/Walletudo/src/main/res/layout/fragment_statistics.xml
+++ b/Walletudo/src/main/res/layout/fragment_statistics.xml
@@ -1,115 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout xmlns:fab="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/balanceLabel"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 android:gravity="center"
                 android:text="@string/statisticsBalanceLabel" />
 
-            <TextView
+            <com.walletudo.ui.view.AmountView
                 android:id="@+id/balance"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center" />
+        </RelativeLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/profitListLabel"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/statisticsProfitListLabel" />
+            <ListView
+                android:id="@+id/profitList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-                    <ListView
-                        android:id="@+id/profitList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
+            <ListView
+                android:id="@+id/lostList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v4.view.ViewPager>
+    </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="16dp"
+        fab:menu_colorNormal="@color/theme_primary"
+        fab:menu_colorPressed="@color/theme_primary_dark">
 
-                    <TextView
-                        android:id="@+id/lostListLabel"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/statisticsLostListLabel" />
-
-                    <ListView
-                        android:id="@+id/lostList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <com.github.clans.fab.FloatingActionMenu
-            android:id="@+id/fab"
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_custom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginBottom="16dp"
-            fab:menu_colorNormal="@color/theme_primary"
-            fab:menu_colorPressed="@color/theme_primary_dark">
+            android:src="@drawable/ic_fab_stats_main"
+            fab:fab_label="Custom period" />
 
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/fab_custom"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_marginBottom="16dp"
-                android:src="@drawable/ic_fab_stats_main"
-                fab:fab_label="Custom period"/>
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/ic_fab_stats_main"
+            fab:fab_label="Current month" />
 
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/fab_month"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_marginBottom="16dp"
-                android:src="@drawable/ic_fab_stats_main"
-                fab:fab_label="Current month"/>
-
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/fab_week"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_marginBottom="16dp"
-                android:src="@drawable/ic_fab_stats_main"
-                fab:fab_label="Current week"/>
-
-        </com.github.clans.fab.FloatingActionMenu>
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_week"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/ic_fab_stats_main"
+            fab:fab_label="Current week" />
+    </com.github.clans.fab.FloatingActionMenu>
+</FrameLayout>
