--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:fitsSystemWindows="true"
-        app:insetForeground="#4000">
+        app:scrimInsetForeground="#4000">
 
         <LinearLayout
             android:layout_width="match_parent"
